# mosaic-cv

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  detector.cpp  detector.h  fcomp  main.cpp  options.h  preprocessing.h
src/: detector.cpp  detector.h  main.cpp  options.h  preprocessing.cpp  stitch.cpp  stitch.h
